# ssGUI

./: .clang-format  .clangd  .editorconfig  .gitattributes  .gitignore  .gitmodules  .tags  CMakeLists.txt  CMakeLists_Bin.txt  ClocExcludeFiles.txt  LICENSE  ProjectDiagram.drawio  README.md  pipeline.gocd.yaml
Src/Examples/: CMakeLists.txt  CharacterLevelAdjustment.cpp  CloningExampleV2.cpp  CloningExampleV3.cpp  CloningExampleWithOR.cpp  CloningExampleWithoutOR.cpp  CustomGraphicsExample.cpp  CustomGraphicsExampleV2.cpp  DockAndLayoutExample.cpp  EventCallbackExample.cpp  ExamplesResources.c  ExamplesResources.h  ExtensionExample.cpp  HierarchyExample.cpp  ImageExample.cpp  LayoutExample.cpp  MaskExample.cpp  PositionSystem.cpp  ReadmeExample.cpp  ReadmeExampleV2.cpp  ReadmeExampleV3.cpp  ReadmeExampleV4.cpp  ReadmeExampleV4_5.cpp  ReadmeExampleV4_ex.cpp  ReadmeExampleV5.cpp  ReadmeExampleV6.cpp  ReadmeExampleV7.cpp  ShowMessage.cpp  TextAlignmentExample.cpp  WindowExample.cpp
Src/Examples/Playground/: CheckboxPlayground.cpp  ImageCanvasPlayground.cpp  SliderPlayground.cpp  StandardCheckboxPlayground.cpp  StandardSliderPlayground.cpp  StandardWindowPlayground.cpp  TabbingPlayground.cpp  TextPlayground.cpp  TextfieldPlayground.cpp  WindowDockingPlayground.cpp
Src/Examples/old/: CloningExampleV2.cpp  CloningExampleWithOR.cpp  CustomGraphicsExample.cpp  ReadmeExample.cpp  ReadmeExampleV2.cpp  ReadmeExampleV3.cpp  ReadmeExampleV4.cpp  ReadmeExampleV4_5.cpp  ReadmeExampleV5.cpp  ReadmeExampleV6.cpp
Src/Tests/: AdvancedSizeTest.cpp  AutoDeleteAfterWindowCloseTest.cpp  BackendInputTest.cpp  BoxShadowMaskTest.cpp  BoxShadowTest.cpp  CMakeLists.txt  CheckboxTest.cpp  ClipboardTest.cpp  CloningTest.cpp  CloningTest2.cpp  CustomCursorTest.cpp  DockAndCompositeLayoutTest.cpp  DockingTest.cpp  DropdownTest.cpp  FactoryCreateGUIObjectTest.cpp  FocusTest.cpp  FontAndImageTest.cpp  FramerateTest.cpp  ImageCanvasTest.cpp  LayoutTest.cpp  LineTest.cpp  MainWindowAndRenderSizeTest.cpp  MainWindowIconTest.cpp  MainWindowResizeTest.cpp  MaskTest.cpp  MenuTest.cpp  MouseScrollInputTest.cpp  OutlineFollowGUIObjectTest.cpp  RoundedCornersFollowGUIObjectTest.cpp  RoundedCornersTest.cpp  RoundedCornersTest2.cpp  ScrollbarTest.cpp  SegmentedVectorTest.cpp  ShapeTest.cpp  ShapeTest2.cpp  StandardButtonTest.cpp  StandardWindowTest.cpp  TestsResources.h  TextFieldTest.cpp  TextSelectionTest.cpp  (+4 more)
Src/Tests/AutoTests/: AutoTestTemplate.cpp  RunAllTests.bat  RunAllTests.sh
Src/Tests/AutoTests/BackendTests/: BackendFontTest_Auto.cpp  BackendImageTest.cpp  BackendImageTest_Auto.cpp  BackendMainWindowTest.cpp  BackendMainWindowTest_Auto.cpp  DynamicAtlasTest_Auto.cpp
Src/Tests/AutoTests/EventCallbackTests/: BackgroundColorChangedEventCallbackTest.cpp  BackgroundColorChangedEventTest_Auto.cpp  BaseEventCallbackTest.cpp  BaseEventCallbackTest_Auto.cpp  ChildAddedEventCallbackTest.cpp  ChildAddedEventCallbackTest_Auto.cpp  ChildAddedEventTest_Auto.cpp  ChildPositionChangedEventCallbackTest.cpp  ChildRemovedEventCallbackTest.cpp  (+12 more)
Src/Tests/ManualTests/: ManualTestTemplate.cpp  ManualTestTemplateWithModes.cpp
src/: CMakeLists.txt  ProjectConfig.hpp.in  main.cpp  main2.cpp
src/Examples/: CharacterLevelAdjustment.cpp  CloningExampleWithOR.cpp  CloningExampleWithoutOR.cpp  DelegateExample.cpp  DockAndLayoutExample.cpp  EventCallbackExample.cpp  ExtensionExample.cpp  ImageExample.cpp  LayoutExample.cpp  MaskExample.cpp  PositionSystem.cpp  ReadmeExample.cpp  ReadmeExampleV2.cpp  ReadmeExampleV3.cpp  ShowMessage.cpp  TextAlignmentExample.cpp  WindowExample.cpp
src/Tests/: AutoDeleteAfterWindowCloseTest.cpp  BackendInputTest.cpp  BorderTest.cpp  BoxShadowTest.cpp  CacheTest.cpp  CheckboxTest.cpp  ClipboardTest.cpp  CloningTest.cpp  CloningTest2.cpp  CustomCursorTest.cpp  DockAndCompositeLayoutTest.cpp  DockingTest.cpp  ImageCanvasTest.cpp  ImageTest.cpp  LayoutTest.cpp  LineTest.cpp  MainWindowResizeTest.cpp  MaskTest.cpp  MenuTest.cpp  MouseScrollInputTest.cpp  OutlineFollowGUIObjectTest.cpp  OutlineTest.cpp  RoundedCornersFollowGUIObjectTest.cpp  RoundedCornersTest.cpp  RoundedCornersTest2.cpp  SegmentedVectorTest.cpp  ShapeTest.cpp  ShapeTest2.cpp  SliderTest.cpp  StandardButtonTest.cpp  StandardWindowTest.cpp  TextFieldTest.cpp  TextSelectionTest.cpp  TextTabTest.cpp  TextTest.cpp  TextTest2.cpp  WindowTest.cpp
src/ssGUI/: ssGUIManager.cpp
src/ssGUI/Backend/: BackendManager.cpp
src/ssGUI/BaseClasses/: BaseGUIObject.cpp  Button.cpp  CMakeLists.txt  Font.cpp  Image.cpp  ImageData.cpp  MainWindow.cpp  ObjectsReferences.cpp  Text.cpp  Widget.cpp  Window.cpp
src/ssGUI/CompositeClasses/: CMakeLists.txt  StandardWindow.cpp
src/ssGUI/DataClasses/: CMakeLists.txt  EventCallbackManager.cpp  ExtensionManager.cpp  Font.cpp  Hierarchy.cpp  ImageData.cpp  ObjectsReferences.cpp  Renderer.cpp  Transform.cpp
src/ssGUI/EventCallbacks/: BaseEventCallback.cpp  ButtonStateChangedEventCallback.cpp  CMakeLists.txt  ChildAddedEventCallback.cpp  ChildPositionChangedEventCallback.cpp  ChildRemovedEventCallback.cpp  FocusLostEventCallback.cpp  FocusedEventCallback.cpp  MinMaxSizeChangedEventCallback.cpp  OnFontChangeEventCallback.cpp  OnObjectDestroyEventCallback.cpp  OnRecursiveChildAddEventCallback.cpp  OnRecursiveChildRemoveEventCallback.cpp  OnWindowCloseEventCallback.cpp  RecursiveChildAddedEventCallback.cpp  RecursiveChildRemovedEventCallback.cpp  RecursiveChildrenAddedEventCallback.cpp  RecursiveChildrenRemovedEventCallback.cpp  SizeChangedEventCallback.cpp  SliderValueChangedEventCallback.cpp  WindowCloseEventCallback.cpp  WindowDragStateChangedEventCallback.cpp
src/ssGUI/Extensions/: AdvancedPosition.cpp  AdvancedSize.cpp  Border.cpp  BoxShadow.cpp  CMakeLists.txt  Dockable.cpp  Docker.cpp  Layout.cpp  LayoutEnforcer.cpp  Mask.cpp  MaskEnforcer.cpp  Outline.cpp  RoundedCorners.cpp  Shape.cpp  WindowLayoutItemEnforcer.cpp
src/ssGUI/GUIObjectClasses/: BaseGUIObject.cpp  Button.cpp  CMakeLists.txt  Checkbox.cpp  GUIObject.cpp  Image.cpp  MainWindow.cpp  Menu.cpp  Text.cpp  TextField.cpp  Widget.cpp  Window.cpp
(+3191 files in other folders)
